[package]
name = "builder"
version = "0.1.0"
authors = ["Tycho Andersen <tycho@tycho.pizza>"]
edition = "2018"

[dependencies]
compression = { path = "../compression" }
format = { path = "../format" }
reader = { path = "../reader" }
oci = { path = "../oci" }
walkdir = "2"
serde_cbor = "*"
fastcdc = "*"
nix = "*"

[dev-dependencies]
tempfile = "*"
serde = "*"
